--- a/index.css
+++ b/index.css
@@ -2,4 +2,30 @@
 * {
 background: #1c2128;
 padding: 7px;
+font-family: sans-serif;
 }
+
+
+.btn {
+    position: absolute;
+    color: #9da7b3;
+    border-radius: 8px;
+    border: 2px solid #305d92;
+    transform: translateY(-50%);
+    transition-duration: 0.4s;
+  }
+
+
+  .btn:hover {
+    background-color: #51545d; /* Green */
+    color: #bfc5cc;
+
+  }
+
+ .input {
+    position: absolute; 
+    color: #9da7b3; 
+    border: 2px solid #000000;
+    transform: translateY(-50%);
+    border-radius: 8px;
+ }
